add basic styling

--- a/static/index.html
+++ b/static/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Tweets</h1>
-    <form>
-      <button type="button" id="gettweets">Get tweets</button>
-    </form>
+    <header>
+      <h1>Tweet scam detector feedback</h1>
+    </header>
     <table id="tweets">
+      <p class="instuctions">You will see a list of sample tweets. Please provide you feedback on whether you think each tweet is a scam or not. Your response will be immediately reflected in the "scam" column.</p>
       <tr>
         <td></td>
       </tr>
